zabbix/database-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  namespace: monitoring
  name: mysql-server
  labels:
    app: mysql-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-server
  serviceName: mysql-server
  template:
    metadata:
      labels:
        app: mysql-server
    spec:
      containers:
        - image: mysql:8.0
          name: mysql-server
          args:
            - "--default-authentication-plugin=mysql_native_password"
            - --character-set-server=utf8
            - --collation-server=utf8_bin
          ports:
            - containerPort: 3306
              name: mysql-server
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: mysql-server
  labels:
    app: mysql-server
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: mysql-server
