zabbix/zabbix-server.yaml
## Deployment
apiVersion:  apps/v1
kind: StatefulSet

metadata:
  namespace: zabbix
  annotations:
  labels:
    zabbix-app: zabbix-server
  name: zabbix-server
spec:
  replicas: 1
  selector:
    matchLabels:
      zabbix-app: zabbix-server  
  serviceName: "zabbix-server"
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        zabbix-app: zabbix-server
    spec:
      containers:
      - image: zabbix/zabbix-server-mysql
        name: zabbix-server
        ports:
        - containerPort: 10051
      restartPolicy: Always
      
#### Service
---
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  labels:
    zabbix-app: zabbix-server
  name: zabbix-server
spec:
  ports:
  - name: "10051"
    port: 10051
    targetPort: 10051
  selector:
    zabbix-app: zabbix-server
status:
  loadBalancer: {}
