zabbix/zabbix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: zabbix
  name:  zabbix
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts: 
    - zabbix.labsecurity.dev.br
    secretName: zabbix-tls
  rules:
  - host: zabbix.labsecurity.dev.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: zabbix-web-nginx-mysql
            port:
              number: 8443
